pessonalizado select .:. melhoria

--- a/_sass/_select.sass
+++ b/_sass/_select.sass
@@ -1,7 +1,6 @@
-/////////////////////////////////////////////////////////////////
-// importação *selectExemple* apenas para pessonalizar exemplo //
-/////////////////////////////////////////////////////////////////
-// @import selectExemple
+// * ////////////////////// * //
+// * importação sass select * //
+// * ////////////////////// * //
 /* width */
 ::-webkit-scrollbar 
   width: 5px
@@ -20,7 +19,11 @@
     user-select: none
     font-size: 0.7rem
     font-family: Arial, Helvetica, sans-serif
-div#idExemplo
+.customSelec
+    outline: none
+    color: transparent
+    text-shadow: 0 0 0 #000000
+div.modalSelect
     // opacity: 0
     display: none
     // display: flex
